# online-ipm

./: ASSUMPTION_CRITIQUE.md  IMPLEMENTATION_SUMMARY.md  KKT_INVERSE_ANALYSIS.md  LOG_OBJECTIVE_CLARIFICATION.md  README.md  STRONG_CONVEXITY_EXPLANATION.md  demo_components.py  kkt_2x2_system.py  kkt_comparison.py  lagrangian_self_concordance.py  log_objective_vs_barrier.py  lp.py  pyproject.toml  socp-standard.py  strong_convexity_analysis.py
OIPM-TEC-review/: main.aux  main.blg  main.out  main.tex  proof_errors_analysis.md
analysis/: ANALYSIS_SUMMARY.md  CORRECTED_KKT_ANALYSIS.md  INEQUALITY_EXTENSION_SUMMARY.md  NOTATION_REFERENCE.md  PAPER_ANALYSIS.md  QUADRATIC_CONVERGENCE_IMPOSSIBILITY.md  README_INEQUALITY_EXTENSION.md  REGRET_DERIVATION_DETAILED.md  REGRET_DOCUMENTATION_INDEX.md  REGRET_QUICK_REFERENCE.md  RESPONSE_TO_VERIFICATION_QUESTIONS.md  VERIFICATION_COST_EQUIVALENCE.md  VERIFICATION_SUMMARY.md  VERIFICATION_THEOREM1.md  VERIFICATION_TRIANGLE_INEQUALITY.md  VG_INEQ_CLARIFICATION.md  corrected_kkt_bound_analysis.py  create_vg_diagram.py  inequality_extension.md  inequality_extension_demo.py  lp_analysis.py  quadratic_convergence_counterexample.py  regret_derivation_visualizer.py  visualize_corrected_kkt.py
experiments/: active_constraint_analysis.py  demo_components.py  hessian_norm.py  kkt_inverse_analysis.py  modified_self_concordance_analysis.py  regret_transfer_analysis.py  robust_online_ipm_demo.py
old_analysis/: COUNTEREXAMPLE_SUMMARY.md  EXPONENT_MODIFICATION_SUMMARY.md  INITIALIZATION_ANALYSIS.md  LAGRANGIAN_SELF_CONCORDANCE_ANALYSIS.md  (+2 more)
(+3 files in other folders)
