[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "online-ipm"
version = "0.1.0"
description = "Python implementation of online interior point methods with warm-starting"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["optimization", "interior-point", "linear-programming", "warm-starting"]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["online-ipm"]

[tool.setuptools]
py-modules = []
